Java17 migration (#586)
* Start on migration to Java17. (WIP)

* Upgraded groovy and some minor deprecation updates

* Minor package updates
Fixed issue in AttributeDeserializer
Updated manager image to use jdk 17

* Updated manager.yml to use Java 17

* Don't push to repo from migration branch

* Added temp workflow file

* LAst changes for workflows to work with java 17

* Fix in ForecastWindServiceTest

* Added Syslog to ForecastWindService and ForecastSolarService

Co-authored-by: Michał Rutka <michal.rutka@gmail.com>